worked on the timer, the game over, the background, the idle and runing animations

--- a/index.html
+++ b/index.html
@@ -39,12 +39,17 @@
               width: 100%;
             "></div>
             </div>
-            <div style="
+            <div id="timer" style="
             background-color: red;
             width: 100px;
             height: 100px;
             flex-shrink: 0;
-          "></div>
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          ">
+                10
+            </div>
             <div style="position: relative; height: 30px; width: 100%">
                 <div style="background-color: yellow; height: 30px"></div>
                 <div id="enemyHealth" style="
@@ -59,9 +64,24 @@
 
             <div></div>
         </div>
+        <div id="displayText" style="
+          position: absolute;
+          color: white;
+          align-items: center;
+          justify-content: center;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          display: none;
+        ">
+            DRAW
+        </div>
         <canvas class="canvas"></canvas>
     </div>
 
+    <script src="utility/functions.js"></script>
+    <script src="utility/classes.js"></script>
     <script src="script.js"></script>
 </body>
 
