--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Fighting Game</title>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-    </style>
 </head>
 
 <body>
@@ -24,15 +20,17 @@
         ">
             <div style="
             position: relative;
-            height: 30px;
             width: 100%;
             display: flex;
             justify-content: flex-end;
+            border-top: 4px solid white;
+            border-left: 4px solid white;
+            border-bottom: 4px solid white;
           ">
-                <div style="background-color: yellow; height: 30px; width: 100%"></div>
+                <div style="background-color: red; height: 30px; width: 100%"></div>
                 <div id="playerHealth" style="
               position: absolute;
-              background: blue;
+              background: #818cf8;
               top: 0;
               right: 0;
               bottom: 0;
@@ -40,21 +38,29 @@
             "></div>
             </div>
             <div id="timer" style="
-            background-color: red;
+            background-color: black;
             width: 100px;
-            height: 100px;
+            height: 50px;
             flex-shrink: 0;
             display: flex;
             align-items: center;
             justify-content: center;
+            color: white;
+            border: 4px solid white;
           ">
                 10
             </div>
-            <div style="position: relative; height: 30px; width: 100%">
-                <div style="background-color: yellow; height: 30px"></div>
+            <div style="
+            position: relative;
+            width: 100%;
+            border-top: 4px solid white;
+            border-right: 4px solid white;
+            border-bottom: 4px solid white;
+          ">
+                <div style="background-color: red; height: 30px"></div>
                 <div id="enemyHealth" style="
               position: absolute;
-              background: blue;
+              background: #818cf8;
               top: 0;
               right: 0;
               bottom: 0;
@@ -79,7 +85,7 @@
         </div>
         <canvas class="canvas"></canvas>
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="utility/functions.js"></script>
     <script src="utility/classes.js"></script>
     <script src="script.js"></script>
