--- a/index.html
+++ b/index.html
@@ -6,83 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Fighting Game</title>
+    <title>Definitely Not MK</title>
 </head>
 
 <body>
-    <div style="position: relative; display: inline-block">
-        <div style="
-          position: absolute;
-          display: flex;
-          width: 100%;
-          align-items: center;
-          padding: 20px;
-        ">
-            <div style="
-            position: relative;
-            width: 100%;
-            display: flex;
-            justify-content: flex-end;
-            border-top: 4px solid white;
-            border-left: 4px solid white;
-            border-bottom: 4px solid white;
-          ">
-                <div style="background-color: red; height: 30px; width: 100%"></div>
-                <div id="playerHealth" style="
-              position: absolute;
-              background: #818cf8;
-              top: 0;
-              right: 0;
-              bottom: 0;
-              width: 100%;
-            "></div>
+    <div id="main">
+        <div id="healthBarTimer">
+            <div class="fighterParent1">
+                <div class="fighterChild"></div>
+                <div id="playerHealth"></div>
             </div>
-            <div id="timer" style="
-            background-color: black;
-            width: 100px;
-            height: 50px;
-            flex-shrink: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            border: 4px solid white;
-          ">
-                10
-            </div>
-            <div style="
-            position: relative;
-            width: 100%;
-            border-top: 4px solid white;
-            border-right: 4px solid white;
-            border-bottom: 4px solid white;
-          ">
-                <div style="background-color: red; height: 30px"></div>
-                <div id="enemyHealth" style="
-              position: absolute;
-              background: #818cf8;
-              top: 0;
-              right: 0;
-              bottom: 0;
-              left: 0;
-            "></div>
+            <div id="timer">10</div>
+            <div class="fighterParent2">
+                <div class="fighterChild"></div>
+                <div id="enemyHealth"></div>
             </div>
 
             <div></div>
         </div>
-        <div id="displayText" style="
-          position: absolute;
-          color: white;
-          align-items: center;
-          justify-content: center;
-          top: 0;
-          right: 0;
-          bottom: 0;
-          left: 0;
-          display: none;
-        ">
-            DRAW
-        </div>
+        <div id="displayText">DRAW</div>
         <canvas class="canvas"></canvas>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
